implemented linter